manifests/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cluster-client-network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cluster-client
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
